@@ -1,3 +1,11 @@
+2007-08-14  Philip Van Hoof  <pvanhoof@gnome.org>
+
+	* Recursively removing local directories
+	* Smaller bugfixes and performance improvements
+	* Enhanced error reporting in the async operations
+	* Dealing with certain states (where priv->folder is uninitialized) in
+	the async operations
+
 2007-08-14  Murray Cumming  <murrayc@murrayc.com>
 
 	* libtinymail-camel/tny-camel-account-priv.h:
